# ppm_rs

./: .pre-commit-config.yaml  .rustfmt.toml  CLAUDE.md  Cargo.toml
.zed/: tasks.json
crates/core/: Cargo.toml
crates/core/src/: clock.rs  config.rs  context.rs  editor.rs  errors.rs  lib.rs
crates/core/src/models/: mod.rs
crates/core/src/output/: in_memory_writer.rs  mod.rs
crates/core/src/repositories/: in_memory_repository.rs  mod.rs  session_repository.rs
crates/core/src/repositories/note/: in_memory.rs  mod.rs  repository.rs
crates/core/src/repositories/project/: in_memory.rs  mod.rs  repository.rs
crates/core/src/repositories/session/: in_memory.rs  mod.rs
crates/core/src/repositories/task/: in_memory.rs  mod.rs  repository.rs
crates/core/src/services/: cancel_focus_session.rs  end_focus_session.rs  mod.rs  start_focus_session.rs
crates/core/src/services/note/: create.rs  delete.rs  list.rs  mod.rs
crates/core/src/services/project/: create.rs  list.rs  mod.rs
crates/core/src/services/session/: cancel.rs  end.rs  list.rs  mod.rs  start.rs  stats.rs  status.rs
crates/core/src/services/task/: complete.rs  create.rs  list.rs  mod.rs
crates/model_macros/: Cargo.toml
crates/model_macros/src/: lib.rs  model.rs  model_id.rs  model_name.rs
src/: errors.rs  main.rs
src/commands/: end.rs  mod.rs  start.rs
src/commands/note/: add.rs  delete.rs  list.rs  mod.rs  new.rs
src/commands/project/: list.rs  mod.rs  new.rs
src/commands/session/: cancel.rs  end.rs  list.rs  mod.rs  start.rs  stats.rs  status.rs
src/commands/task/: add.rs  done.rs  list.rs  mod.rs  new.rs
tests/: e2e_tests.rs
